--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <form onsubmit="generatePostTypeCode(event)">
             <div class="form-group">
             <label>Naam post type (Meervoud)</label>
-                <input type="text" name="title" class="form-control">
+                <input type="text" name="title" class="form-control" required>
             </div>
             <div class="form-group">
             <label>Naam post type (Enkelvoud)</label>
-                <input type="text" name="titleSingle" class="form-control">
+                <input type="text" name="titleSingle" class="form-control" required>
             </div>
             <div class="form-group">
             <label>Slug post type</label>
-                <input type="text" name="slug" class="form-control">
+                <input type="text" name="slug" class="form-control" required>
             </div>
             <div class="form-group">
             <button type="submit" class="btn btn-primary">Genereer code</button>
