--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                       </div>
                       <div class="col-12">
                             <div class="form-check">
-                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                    <input type="checkbox" class="form-check-input" name="archives" value="true" id="exampleCheck1">
                                     <label class="form-check-label" for="exampleCheck1">Enable archive</label>
                                   </div>
                       </div>
