--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
                                         <label>Name (singular)</label>
                                             <input type="text" name="titleSingle" placeholder="Book" class="form-control" required>
                                         </div>  
-                        </div>               
+                        </div>  
+                        <div class="col-12">
+                            <div class="form-group">
+                                <label>Post type description</label>
+                                <textarea name="description" id="" cols="30" rows="4" class="form-control" required></textarea>
+                            </div>
+                        </div>             
                       <div class="col-12">
                             <div class="form-group">
                                     <label>Slug <small class="text-muted">https://yourwebsiteurl.com/<strong>your-slug</strong></small></label>
@@ -50,7 +56,7 @@
                       </div>
                       <div class="col-12">
                             <div class="form-check">
-                                    <input type="checkbox" class="form-check-input" name="archives" value="true" id="exampleCheck1">
+                                    <input type="checkbox" class="form-check-input" name="archives" id="exampleCheck1">
                                     <label class="form-check-label" for="exampleCheck1">Enable archive</label>
                                   </div>
                       </div>
