--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
                                     </div>
                       </div>
                       <div class="col-12">
+                        <div class="form-group">
+                                <label>Capability Type</label>
+                                    <select name="capability" id="" class="form-control">
+                                        <option value="post">Post</option>
+                                        <option value="page">Page</option>
+                                    </select>
+                                </div>
+                  </div>
+                      <div class="col-12">
                           <label>Options</label>
                                  <ul class="list-group">
                                      <li class="list-group-item">
