--- a/index.html
+++ b/index.html
@@ -123,6 +123,19 @@
                                    </div>
                                  </ul>
                       </div>
+                      <div class="col-12">
+                          <div class="card">
+                              <div class="card-header">
+                                  Custom fields
+                              </div>
+                              <div class="card-body">
+                                  <ul class="list-group">
+                                      <li class="empty">No fields</li>
+                                  </ul>
+                                  <button class="btn btn-primary btn-block">Add custom field</button>
+                              </div>
+                          </div>
+                      </div>
                     <div class="col-12">
                         <hr>
                             <div class="form-group">
